# SimplePasswordEncryptor

./: app.py  classified.txt  pyproject.toml  readme.md
